--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,27 +53,32 @@
         android:drawablePadding="20dp"
         />
 
-    <com.google.android.material.button.MaterialButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <Button
         android:id="@+id/log_in_button"
-        android:layout_below="@+id/password"
-        android:text="LOGIN"
-        android:background="#30ffffff"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="20dp"
-        />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/forgot_password"
-        android:text="Forgot Password?"
-        android:layout_below="@id/log_in_button"
-        android:textColor="@color/white"
+        android:layout_below="@+id/password"
         android:layout_centerHorizontal="true"
-        android:layout_margin="20dp"
-        />
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="#30ffffff"
+        android:text="LOGIN" />
+
+    <Button
+        android:id="@+id/forgot_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/log_in_button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="#00615858"
+        android:text="Forgot Password?"
+        android:textColor="@color/white" />
 
 
 
