--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:background="@drawable/login_background"
-    tools:context=".MainActivity">
+    tools:context=".view.MainActivity">
 
-    <TextView
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.stylespo.viewmodel.SignUpViewModel" />
+    </data>
+
+    <RelativeLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+   <TextView
         android:id="@+id/signin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,7 +45,8 @@
         android:hint="Username"
         android:padding="20dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColorHint="@color/white"
+        />
 
     <EditText
         android:layout_width="match_parent"
@@ -51,6 +61,7 @@
         android:padding="20dp"
         android:drawableLeft="@drawable/password_icon"
         android:drawablePadding="20dp"
+
         />
 
     <Button
@@ -81,5 +92,5 @@
         android:textColor="@color/white" />
 
 
-
-</RelativeLayout>
+    </RelativeLayout>
+</layout>
