--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -2,22 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/bottom_home"
+        android:id="@+id/HomepageFragment"
         android:icon="@drawable/baseline_home_24"
         android:title="Home"
         />
     <item
-        android:id="@+id/bottom_add"
+        android:id="@+id/AddFragment"
         android:icon="@drawable/baseline_photo_camera_24"
         android:title="Make a post"
         />
     <item
-        android:id="@+id/bottom_discover"
+        android:id="@+id/DiscoverFragment"
         android:icon="@drawable/baseline_auto_awesome_mosaic_24"
         android:title="Discover"
         />
     <item
-        android:id="@+id/bottom_profile"
+        android:id="@+id/ProfileFragment"
         android:icon="@drawable/baseline_account_box_24"
         android:title="Profile"
         />
