--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/homepage_background"
-    tools:context=".HomePage">
+    tools:context=".extraActivitiesNotUsing.HomePage_og">
 
     <TextView
         android:layout_width="wrap_content"
