--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -80,6 +80,32 @@
         android:text="Forgot Password?"
         android:textColor="@color/white" />
 
+    <EditText
+        android:id="@+id/accountCheck"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/forgot_password"
+        android:hint="Don't have an account?"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
+
+    <Button
+        android:id="@+id/makeAccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/accountCheck"
+        android:layout_alignParentEnd="true"
+        android:background="#30ffffff"
+        android:text="Sign Up" />
+
+    <FrameLayout
+        android:id="@+id/login_frag_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+    </FrameLayout>
 
 
 </RelativeLayout>
