--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/homepage_background"
-    tools:context=".extraActivitiesNotUsing.Add_og">
+    tools:context=".Add">
 
     <TextView
         android:layout_width="wrap_content"
