--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -80,23 +80,32 @@
         android:text="Forgot Password?"
         android:textColor="@color/white" />
 
-    <FrameLayout
+    <EditText
+        android:id="@+id/accountCheck"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/main_frag"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/forgot_password"
+        android:hint="Don't have an account?"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/nav_host_fragment"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <Button
+        android:id="@+id/makeAccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/accountCheck"
+        android:layout_alignParentEnd="true"
+        android:background="#30ffffff"
+        android:text="Sign Up" />
 
-        app:defaultNavHost="true"
-        app:navGraph="@navigation/nav_graph" />
+    <FrameLayout
+        android:id="@+id/login_frag_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+    </FrameLayout>
 
 
 </RelativeLayout>
