--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,32 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/signUpFragment">
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.example.stylespo.FirstFragment"
+        android:name="com.example.stylespo.view.LoginFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_first">
 
-        <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.example.stylespo.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
 
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
     </fragment>
+
 
     <fragment
         android:id="@+id/ThirdFragment"
-        android:name="com.example.stylespo.ThirdFragment"
+        android:name="com.example.stylespo.defaultNotUsing.ThirdFragment"
         android:label="Third Fragment"
         tools:layout="@layout/fragment_third">
 
@@ -36,7 +25,119 @@
             android:id="@+id/action_FirstFragment_to_ThirdFragment"
             app:destination="@id/ThirdFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/signUpFragment"
+        android:name="com.example.stylespo.view.SignUpFragment"
+        android:label="SignUpFragment"
+        tools:layout="@layout/fragment_sign_up">
 
+        <action
+            android:id="@+id/action_signUpFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_signUpFragment_to_AddFragment"
+            app:destination="@id/AddFragment" />
+        <action
+            android:id="@+id/action_signUpFragment_to_HomepageFragment"
+            app:destination="@id/HomepageFragment" />
+        <action
+            android:id="@+id/action_signUpFragment_to_DiscoverFragment"
+            app:destination="@id/DiscoverFragment" />
+        <action
+            android:id="@+id/action_signUpFragment_to_ProfileFragment"
+            app:destination="@id/ProfileFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.example.stylespo.view.LoginFragment"
+        android:label="LoginFragment"
+        tools:layout="@layout/fragment_login">
+
+        <action
+            android:id="@+id/action_loginFragment_to_signUpFragment"
+            app:destination="@id/signUpFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_AddFragment"
+            app:destination="@id/AddFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_HomepageFragment"
+            app:destination="@id/HomepageFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_DiscoverFragment"
+            app:destination="@id/DiscoverFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_ProfileFragment"
+            app:destination="@id/ProfileFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/AddFragment"
+        android:name="com.example.stylespo.view.AddFragment"
+        android:label="AddFragment"
+        tools:layout="@layout/fragment_add">
+
+        <action
+            android:id="@+id/action_AddFragment_to_HomepageFragment"
+            app:destination="@id/HomepageFragment" />
+        <action
+            android:id="@+id/action_AddFragment_to_DiscoverFragment"
+            app:destination="@id/DiscoverFragment" />
+        <action
+            android:id="@+id/action_AddFragment_to_ProfileFragment"
+            app:destination="@id/ProfileFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/DiscoverFragment"
+        android:name="com.example.stylespo.view.DiscoverFragment"
+        android:label="DiscoverFragment"
+        tools:layout="@layout/fragment_discover">
+
+        <action
+            android:id="@+id/action_DiscoverFragment_to_HomepageFragment"
+            app:destination="@id/HomepageFragment" />
+        <action
+            android:id="@+id/action_DiscoverFragment_to_AddFragment"
+            app:destination="@id/AddFragment" />
+        <action
+            android:id="@+id/action_DiscoverFragment_to_ProfileFragment"
+            app:destination="@id/ProfileFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/ProfileFragment"
+        android:name="com.example.stylespo.view.ProfileFragment"
+        android:label="ProfileFragment"
+        tools:layout="@layout/fragment_profile">
+
+        <action
+            android:id="@+id/action_ProfileFragment_to_DiscoverFragment"
+            app:destination="@id/DiscoverFragment" />
+        <action
+            android:id="@+id/action_ProfileFragment_to_HomepageFragment"
+            app:destination="@id/HomepageFragment" />
+        <action
+            android:id="@+id/action_ProfileFragment_to_AddFragment"
+            app:destination="@id/AddFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/HomepageFragment"
+        android:name="com.example.stylespo.view.HomepageFragment"
+        android:label="HomepageFragment"
+        tools:layout="@layout/fragment_homepage">
+
+        <action
+            android:id="@+id/action_HomepageFragment_to_AddFragment"
+            app:destination="@id/AddFragment" />
+        <action
+            android:id="@+id/action_HomepageFragment_to_DiscoverFragment"
+            app:destination="@id/DiscoverFragment" />
+        <action
+            android:id="@+id/action_HomepageFragment_to_ProfileFragment"
+            app:destination="@id/ProfileFragment" />
+    </fragment>
 
 
 </navigation>
