--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -80,7 +80,7 @@
         android:text="Forgot Password?"
         android:textColor="@color/white" />
 
-    <EditText
+    <TextView
         android:id="@+id/accountCheck"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
