login and sign-up update
added proper authentication and datastore

--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -53,7 +53,7 @@
             android:textColor="@color/white"
             android:textColorHint="@color/white" />
         <EditText
-            android:id="@+id/username"
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/last_name"
@@ -63,7 +63,7 @@
             android:layout_marginBottom="10dp"
             android:background="#30ffffff"
             android:drawablePadding="20dp"
-            android:hint="Username"
+            android:hint="Email"
             android:padding="20dp"
             android:textColor="@color/white"
             android:textColorHint="@color/white" />
@@ -72,7 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/password"
-            android:layout_below="@id/username"
+            android:layout_below="@id/email"
             android:background="#30ffffff"
             android:hint="Password"
             android:textColorHint="@color/white"
@@ -96,7 +96,7 @@
             android:drawablePadding="20dp"
             />
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/dob"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/confirm_password"
@@ -106,7 +106,7 @@
             android:layout_marginBottom="10dp"
             android:background="#30ffffff"
             android:drawablePadding="20dp"
-            android:hint="Email"
+            android:hint="Date Of Birth"
             android:padding="20dp"
             android:textColor="@color/white"
             android:textColorHint="@color/white" />
@@ -115,7 +115,7 @@
             android:id="@+id/sign_up_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/email"
+            android:layout_below="@+id/dob"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
