--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -16,6 +16,37 @@
         android:layout_centerInParent="true"
         android:layout_centerHorizontal="true"
         />
+    <Button
+        android:id="@+id/button_select"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/bottomNavigationView"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="237dp"
+        android:layout_marginBottom="528dp"
+        android:text="Select" />
+
+    <Button
+        android:id="@+id/button_upload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/bottomNavigationView"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="70dp"
+        android:layout_marginBottom="531dp"
+        android:text="Upload" />
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/bottomNavigationView"
+        android:layout_below="@+id/button_select"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="-123dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="30dp"
+        tools:src="@tools:sample/backgrounds/scenic" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
@@ -25,6 +56,8 @@
         android:layout_marginBottom="0dp"
         app:itemIconSize="30dp"
         app:menu="@menu/bottom_menu" />
+
+
 
 
 </RelativeLayout>
