--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -8,14 +8,43 @@
     tools:context=".view.HomepageFragment">
 
     <TextView
+        android:id="@+id/camera_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:text="home"
+        android:text="Click on the camera button to start the camera"
         android:textColor="@color/black"
-        android:layout_centerInParent="true"
         android:layout_centerHorizontal="true"
         />
+
+    <Button
+        android:id="@+id/button_camera_id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/camera_text"
+        android:text="Camera"
+        android:layout_centerHorizontal="true"
+        />
+
+    <ImageView
+        android:id="@+id/imageview1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/bottomNavigationView"
+        android:layout_below="@+id/button_camera_id"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="-123dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="30dp"
+        tools:src="@tools:sample/backgrounds/scenic" />
+
+<!--    <ImageView-->
+<!--        android:id="@+id/imageview1"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_below="@id/button_camera_id"-->
+<!--        android:layout_above="@+id/bottomNavigationView"-->
+<!--        />-->
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
