--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -20,7 +20,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/bottomNavigationView"
+        android:id="@+id/bottom_add"
         android:layout_alignParentBottom="true"
         app:menu="@menu/bottom_menu"
         app:itemIconSize="30dp"
