Update on Camera and Profile
Getting Image taken from camera and display it in profile. Most of backend stuff

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -40,8 +40,11 @@
         app:itemIconSize="30dp"
         />
 
-
-
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:src="@tools:sample/backgrounds/scenic" />
 
 
 </RelativeLayout>
