--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/HomepageFragment2"
+        android:id="@+id/HomepageFragment"
         android:icon="@drawable/baseline_home_24"
         android:title="Home"
         />
