--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,10 +10,22 @@
     android:background="@drawable/login_background"
     tools:context=".view.SettingsActivity">
 
+    <ImageButton
+        android:id="@+id/back_to_profile_button"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="#00000000"
+        android:src="@drawable/baseline_keyboard_backspace_24"
+        android:onClick="onBackButtonClicked"/>
+
     <Button
         android:id="@+id/sendPasswordResetEmailButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
+        android:layout_marginLeft="70dp"
+
         android:text="Send Password Reset Email"
         android:onClick="onSendPasswordResetEmail" />
 
@@ -21,12 +33,17 @@
         android:id="@+id/updateFirstNameButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+
+        android:layout_marginLeft="95dp"
+
         android:text="Update First Name"
         android:onClick="onUpdateFirstNameClick" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:orientation="horizontal"
         android:id="@+id/updateFirstNameLayout"
         android:visibility="gone">
@@ -51,6 +68,10 @@
         android:id="@+id/deleteAccountButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+
+        android:layout_marginLeft="105dp"
+
         android:text="Delete Account"
         android:onClick="onDeleteAccountClick" />
 
