Add new implementation for friends

--- a/app/src/main/res/layout/activity_other_user_profile.xml
+++ b/app/src/main/res/layout/activity_other_user_profile.xml
@@ -77,13 +77,15 @@
         android:layout_below="@id/username"
         android:layout_centerHorizontal="true"
         android:text="Add Friend" />
+
     <Button
-        android:id="@+id/friend_request_button_decline"
+        android:id="@+id/friend_request_button_send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/username"
-        android:layout_toEndOf="@id/friend_request_button_send"
-        android:text="decline"/>
+        android:layout_centerHorizontal="true"
+        android:text="De Friend" />
+
     <TextView
         android:id="@+id/friend_count"
         android:layout_width="wrap_content"
