Added decline for request

--- a/app/src/main/res/layout/fragment_other_user_profile.xml
+++ b/app/src/main/res/layout/fragment_other_user_profile.xml
@@ -78,7 +78,13 @@ tools:context=".view.UserProfileFragment">
     android:layout_centerHorizontal="true"
     android:text="Add Friend" />
 
-
+<Button
+    android:id="@+id/friend_request_button_decline"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@id/username"
+    android:layout_toEndOf="@id/friend_request_button_send"
+    android:text="decline"/>
 
 <TextView
     android:id="@+id/friend_count"
