Implemented friend count and back button on notification page

--- a/app/src/main/res/layout/fragment_other_user_profile.xml
+++ b/app/src/main/res/layout/fragment_other_user_profile.xml
@@ -90,7 +90,7 @@ tools:context=".view.UserProfileFragment">
     android:id="@+id/friend_count"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="50dp"
+    android:layout_marginStart="75dp"
     android:layout_toRightOf="@+id/username"
     android:textSize="18sp"
     android:textColor="@color/black"
@@ -103,10 +103,10 @@ tools:context=".view.UserProfileFragment">
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@id/friend_count"
-    android:layout_toRightOf="@id/friend_request_button_send"
+    android:layout_toRightOf="@id/username"
     android:textSize="18sp"
     android:textColor="@color/black"
-    android:layout_marginStart="30dp"
+    android:layout_marginStart="50dp"
     android:layout_marginEnd="23dp"
     android:layout_marginBottom="30dp"
     android:text="Friends" />
