--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -7,6 +7,16 @@
     android:background="@drawable/homepage_background"
     tools:context=".view.NotificationsActivity">
 
+    <ImageButton
+        android:id="@+id/back_button"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="7dp"
+        android:layout_marginBottom="7dp"
+        android:background="#00000000"
+        android:src="@drawable/baseline_keyboard_backspace_24" />
+
     <!-- Replace ScrollView with a RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/friend_requests_recycler_view"
