--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -63,6 +63,27 @@
         android:layout_marginBottom="30dp"
         android:text="Username" />
 
+    <TextView
+        android:id="@+id/friend_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_toRightOf="@+id/username"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:layout_marginTop="40dp"
+        android:text="#" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/username"
+        android:layout_below="@id/friend_count"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:layout_marginBottom="30dp"
+        android:text="Friends" />
+
     <ImageView
         android:id="@+id/today_image"
         android:layout_width="wrap_content"
