user can delete posts

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -40,7 +40,14 @@
             android:scaleType="centerCrop"
             android:src="@drawable/baseline_person_2_24" />/>
     </androidx.cardview.widget.CardView>
-
+    <ImageButton
+        android:id="@+id/delete_post_button"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="240dp"
+        android:layout_marginTop="170dp"
+        android:background="#00000000"
+        android:src="@drawable/baseline_delete_24" />
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
