slight progresss on ui test 2 but not really

--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -50,4 +50,11 @@
         app:menu="@menu/bottom_menu"
         app:itemIconSize="30dp" />
 
+    <FrameLayout
+        android:id="@+id/DiscoverFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+    </FrameLayout>
 </RelativeLayout>
